Complete Scenario 1: read-only and state-changing actions

--- a/notebooks/functions.ipynb
+++ b/notebooks/functions.ipynb
@@ -7,12 +7,15 @@
    "source": [
     "# openai functions\n",
     "\n",
-    "Reference: https://github.com/Azure-Samples/openai/blob/main/Basic_Samples/Functions/working_with_functions.ipynb"
+    "References:\n",
+    "\n",
+    "- https://github.com/Azure-Samples/openai/blob/main/Basic_Samples/Functions/working_with_functions.ipynb\n",
+    "- https://github.com/openai/openai-cookbook/blob/main/examples/How_to_call_functions_for_knowledge_retrieval.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "id": "e95fa4cc",
    "metadata": {},
    "outputs": [],
@@ -34,7 +37,10 @@
    "id": "fa7c8dd2",
    "metadata": {},
    "source": [
-    "## Natural language query to search filters (DSL)"
+    "## Natural language to structured DSL\n",
+    "\n",
+    "Following example shows how to convert natural language queries to a structured query using OpenAI functions.\n",
+    "As an example we use natural language queries to search for shoes on an online store. OpenAI functions converts these queries into search filters that can be used to call a search API and show results to the user."
    ]
   },
   {
@@ -163,6 +169,7 @@
     }
    ],
    "source": [
+    "# simulate a chatbot style conversation\n",
     "user_queries = [\n",
     "    \"blue running shoes for small feet\",\n",
     "    \"show nike and puma only\",\n",
@@ -194,24 +201,12 @@
    "source": [
     "## Chatbot performing API actions\n",
     "\n",
-    "Sample chatbot created using openai functions. Chatbot works for an ecommerce app and helps customers solve order issues by performing actions by calling APIs. It also does retrieval.\n",
-    "\n",
-    "\n",
-    "### Scenario 2\n",
-    "\n",
-    "- My delivered order has defects\n",
-    "- I would like an exchange/return\n",
-    "\n",
-    "### Scenario 3\n",
-    "\n",
-    "- (order_id in chat history)\n",
-    "- I need order invoice\n",
-    "- Here's how to get order invoice... (retrieval from docs)"
+    "Sample chatbot created using openai functions. Example chatbot below works for an ecommerce app and helps customers solve order issues by performing actions by calling APIs. It also does information retrieval. Function schema is automatically derived from function signature and doc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "id": "56b17829",
    "metadata": {},
    "outputs": [],
@@ -221,42 +216,38 @@
     "reload(functions_code)\n",
     "\n",
     "order_api = functions_code.OrderAPI()\n",
-    "functions = order_api.get_functions()"
+    "functions = order_api.get_functions()  # automatically generated functions from methods of OrderAPI class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 105,
    "id": "dad3ec1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "system_prompt = \"\"\"You are an AI assistant for an ecommerce app helping customers with their queries about their orders.\n",
-    "If customer's query requires an order id but none is present in previous messages then call list orders function and then ask them: \"Could you please tell me which order?\".\n",
+    "If customer's query requires an order id but none is present in previous messages then call list orders function with to_get_order_details=true.\n",
+    "Customer's first ask to cancel order must be responded to with confirmation so call cancel order with confirmed as false. Once customer confirms call cancel order with confirmed as true. \n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f12c3a36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 106,
    "id": "d9e434c2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import display_html\n",
+    "\n",
     "def add_to_chat_history(chat_history, message):\n",
     "    content = message[\"content\"]\n",
     "    if not content:\n",
     "        function_call = message['function_call']\n",
     "        content = f\"{function_call['name']}({function_call['arguments']})\"\n",
-    "    print(f\"{message['role']}: {content}\")\n",
+    "    content = content.replace(\"\\n\", \"<br>\")\n",
+    "    display_html(f\"<b>{message['role']}:</b> {content}\", raw=True)\n",
     "    chat_history.append(message)\n",
     "    return chat_history\n",
     "\n",
@@ -273,10 +264,14 @@
     "def simulate_conversation(order_api, chat_history):\n",
     "    response_message = chat_completion(chat_history)\n",
     "    if \"function_call\" not in response_message:\n",
-    "        raise Exception(f\"invalid resp: {response_message}\")\n",
+    "        chat_history = add_to_chat_history(chat_history, {\n",
+    "            \"role\": \"assistant\",\n",
+    "            \"content\": response_message[\"content\"],\n",
+    "        })\n",
+    "        return chat_history\n",
+    "\n",
     "    func_name = response_message[\"function_call\"][\"name\"]\n",
     "    func_arguments = response_message[\"function_call\"][\"arguments\"]\n",
-    "\n",
     "    chat_history = add_to_chat_history(chat_history, {\n",
     "        \"role\": \"assistant\",\n",
     "        \"function_call\": {\n",
@@ -285,20 +280,41 @@
     "        },\n",
     "        \"content\": None,\n",
     "    })\n",
-    "\n",
     "    func = getattr(functions_code.OrderAPI, func_name)\n",
-    "    func_output = func(order_api, **json.loads(func_arguments))\n",
+    "    func_kwargs = json.loads(func_arguments)\n",
     "\n",
-    "    chat_history = add_to_chat_history(chat_history, {\n",
-    "        \"role\": \"function\",\n",
-    "        \"name\": func_name,\n",
-    "        \"content\": func_output.stringify(),\n",
-    "    })\n",
-    "    response_message = chat_completion(chat_history)\n",
-    "    chat_history = add_to_chat_history(chat_history, {\n",
-    "        \"role\": \"assistant\",\n",
-    "        \"content\": response_message[\"content\"],\n",
-    "    })\n",
+    "    if func_name == \"get_order_details\":\n",
+    "        func_output = func(order_api, **func_kwargs)\n",
+    "        chat_history = add_to_chat_history(chat_history, {\n",
+    "            \"role\": \"function\",\n",
+    "            \"name\": func_name,\n",
+    "            \"content\": str(func_output),\n",
+    "        })\n",
+    "    elif func_name == \"list_orders\":\n",
+    "        func_output = func(order_api, **func_kwargs)\n",
+    "        chat_history = add_to_chat_history(chat_history, {\n",
+    "            \"role\": \"function\",\n",
+    "            \"name\": func_name,\n",
+    "            \"content\": str(func_output),\n",
+    "        })\n",
+    "        if func_kwargs[\"to_get_order_details\"]:\n",
+    "            chat_history = add_to_chat_history(chat_history, {\n",
+    "                \"role\": \"assistant\",\n",
+    "                \"content\": \"Could you please tell me which order?\",\n",
+    "            })\n",
+    "    elif func_name == \"cancel_order\":\n",
+    "        if not func_kwargs[\"confirmed\"]:\n",
+    "            chat_history = add_to_chat_history(chat_history, {\n",
+    "                \"role\": \"assistant\",\n",
+    "                \"content\": \"Are you sure you want to cancel your order?\",\n",
+    "            })\n",
+    "        else:\n",
+    "            func_output = func(order_api, **func_kwargs)\n",
+    "            chat_history = add_to_chat_history(chat_history, {\n",
+    "                \"role\": \"function\",\n",
+    "                \"name\": func_name,\n",
+    "                \"content\": str(func_output),\n",
+    "            })\n",
     "    return chat_history"
    ]
   },
@@ -307,10 +323,10 @@
    "id": "ae1ab304",
    "metadata": {},
    "source": [
-    "### Scenario 1\n",
+    "### Scenario 1: Read-only (list_orders) and State-changing (cancel_order) actions\n",
     "\n",
     "- Customer: Where is my order? (without order_id)\n",
-    "- Bot: Please let me know which order: (list orders call)\n",
+    "- Bot: Could you please tell me which order? (list orders call)\n",
     "- Customer: nike shoes one\n",
     "- Bot: Your order is at Indiranagar (get order details call)\n",
     "- Customer: Cancel my order\n",
@@ -323,45 +339,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 107,
    "id": "05173b54",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "user: where is my order?\n",
-      "assistant: list_orders({})\n",
-      "function: id,item_name,status,order_date\n",
-      "124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00\n",
-      "123,Beige blanket,DELIVERED,2023-01-01 00:00:00\n",
-      "122,IKEA Table lamp,CANCELED,2022-02-28 00:00:00\n",
-      "121,Shampoo,DELIVERED,2022-01-01 00:00:00\n",
-      "assistant: Here are your recent orders:\n",
-      "\n",
-      "1. Order ID: 124, Item: Nike running shoes, Status: Out for delivery, Order Date: 2023-09-11\n",
-      "2. Order ID: 123, Item: Beige blanket, Status: Delivered, Order Date: 2023-01-01\n",
-      "3. Order ID: 122, Item: IKEA Table lamp, Status: Canceled, Order Date: 2022-02-28\n",
-      "4. Order ID: 121, Item: Shampoo, Status: Delivered, Order Date: 2022-01-01\n",
-      "\n",
-      "Could you please tell me which order you are asking about?\n",
-      "user: nike shoes one\n",
-      "assistant: get_order_details({\n",
-      "  \"order_id\": 124\n",
-      "})\n",
-      "function: id,item_name,status,order_date,current_location,delivery_eta\n",
-      "124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00,Indiranagar,2023-09-13 00:00:00\n",
-      "assistant: Your order for Nike running shoes (Order ID: 124) is currently out for delivery. It is currently in Indiranagar and the estimated delivery date is on 2023-09-13.\n"
-     ]
+     "data": {
+      "text/html": [
+       "<b>user:</b> where is my order?"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>assistant:</b> list_orders({<br>  \"to_get_order_details\": true<br>})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>function:</b> id,item_name,status,order_date<br>124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00<br>123,Beige blanket,DELIVERED,2023-01-01 00:00:00<br>122,IKEA Table lamp,CANCELED,2022-02-28 00:00:00<br>121,Shampoo,DELIVERED,2022-01-01 00:00:00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>assistant:</b> Could you please tell me which order?"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>user:</b> nike shoes one"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>assistant:</b> get_order_details({<br>  \"order_id\": 124<br>})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>function:</b> id,item_name,status,order_date,current_location,delivery_eta<br>124,Nike running shoes,OUT_FOR_DELIVERY,2023-09-11 00:00:00,Indiranagar,2023-09-13 00:00:00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>user:</b> cancel my order"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>assistant:</b> cancel_order({<br>  \"order_id\": 124,<br>  \"confirmed\": false<br>})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>assistant:</b> Are you sure you want to cancel your order?"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>user:</b> yes"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>assistant:</b> cancel_order({<br>  \"order_id\": 124,<br>  \"confirmed\": true<br>})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>function:</b> Cancellation was successful."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "user_inputs = [\n",
     "    \"where is my order?\",\n",
     "    \"nike shoes one\",\n",
-    "#     \"cancel my order\",\n",
-    "#     \"yes\",\n",
+    "    \"cancel my order\",\n",
+    "    \"yes\",\n",
     "]\n",
     "\n",
     "chat_history = []\n",
@@ -379,84 +484,31 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "0c7afa63",
+   "metadata": {},
+   "source": [
+    "### Scenario 2: Information retrieval\n",
+    "\n",
+    "- Customer: I need invoice for my order\n",
+    "- Bot: Here's how to get order invoice... (retrieval from docs)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1b5698e1",
+   "execution_count": null,
+   "id": "7e4752f1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "7e4752f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nYou are a sophisticated AI assistant, a specialist in user intent detection and interpretation.\\nYour task is to perceive and respond to the user's needs, even when they're expressed in an indirect or direct manner.\\nYou excel in recognizing subtle cues: for example, if a user states they are 'hungry', you should assume they are seeking nearby dining options such as a restaurant or a cafe.\\nIf they indicate feeling 'tired', 'weary', or mention a long journey, interpret this as a request for accommodation options like hotels or guest houses.\\nHowever, remember to navigate the fine line of interpretation and assumption: if a user's intent is unclear or can be interpreted in multiple ways, do not hesitate to politely ask for additional clarification.\\nMake sure to tailor your responses to the user based on their preferences and past experiences which can be found here {customer_profile_str}\\n\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " \"\"\"\n",
-    "You are a sophisticated AI assistant, a specialist in user intent detection and interpretation.\n",
-    "Your task is to perceive and respond to the user's needs, even when they're expressed in an indirect or direct manner.\n",
-    "You excel in recognizing subtle cues: for example, if a user states they are 'hungry', you should assume they are seeking nearby dining options such as a restaurant or a cafe.\n",
-    "If they indicate feeling 'tired', 'weary', or mention a long journey, interpret this as a request for accommodation options like hotels or guest houses.\n",
-    "However, remember to navigate the fine line of interpretation and assumption: if a user's intent is unclear or can be interpreted in multiple ways, do not hesitate to politely ask for additional clarification.\n",
-    "Make sure to tailor your responses to the user based on their preferences and past experiences which can be found here {customer_profile_str}\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7ba53f26",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'call_google_places_api',\n",
-       " 'description': 'This function calls the Google Places API to find the top places of a specified type near a specific location. It can be used when a user expresses a need (e.g., feeling hungry or tired) or wants to find a certain type of place (e.g., restaurant or hotel).',\n",
-       " 'parameters': {'type': 'object',\n",
-       "  'properties': {'place_type': {'type': 'string',\n",
-       "    'description': 'The type of place to search for.'}}},\n",
-       " 'result': {'type': 'array', 'items': {'type': 'string'}}}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "        {\n",
-    "            \"name\": \"call_google_places_api\",\n",
-    "            \"description\": \"This function calls the Google Places API to find the top places of a specified type near a specific location. It can be used when a user expresses a need (e.g., feeling hungry or tired) or wants to find a certain type of place (e.g., restaurant or hotel).\",\n",
-    "            \"parameters\": {\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"place_type\": {\n",
-    "                        \"type\": \"string\",\n",
-    "                        \"description\": \"The type of place to search for.\"\n",
-    "                    }\n",
-    "                }\n",
-    "            },\n",
-    "            \"result\": {\n",
-    "                \"type\": \"array\",\n",
-    "                \"items\": {\n",
-    "                    \"type\": \"string\"\n",
-    "                }\n",
-    "            }\n",
-    "        }"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
