Knowledge retrieval in functions

--- a/notebooks/functions.ipynb
+++ b/notebooks/functions.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "e95fa4cc",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "287c35e8",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
     "                        \"type\": \"string\",\n",
     "                        \"enum\": [\"running\", \"jogging\", \"trekking\", \"sports\", \"heels\"]\n",
     "                    },\n",
-    "                    \"description\": \"The types of shoes to search for.\"\n",
+    "                    \"description\": \"The types of shoes to search for. This could be different types of shoes.\"\n",
     "                },\n",
     "                \"sizes\": {\n",
     "                    \"type\": \"array\",\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "bcbcc5be",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "9f968a32",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "id": "56b17829",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "id": "dad3ec1b",
    "metadata": {},
    "outputs": [],
@@ -229,12 +229,13 @@
     "system_prompt = \"\"\"You are an AI assistant for an ecommerce app helping customers with their queries about their orders.\n",
     "If customer's query requires an order id but none is present in previous messages then call list orders function with to_get_order_details=true.\n",
     "Customer's first ask to cancel order must be responded to with confirmation so call cancel order with confirmed as false. Once customer confirms call cancel order with confirmed as true. \n",
+    "If customer's query cannot be answered by any other function then call help center to retrieve answer.\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 21,
    "id": "d9e434c2",
    "metadata": {},
    "outputs": [],
@@ -315,6 +316,13 @@
     "                \"name\": func_name,\n",
     "                \"content\": str(func_output),\n",
     "            })\n",
+    "    elif func_name == \"help_center\":\n",
+    "        func_output = func(order_api, **func_kwargs)\n",
+    "        chat_history = add_to_chat_history(chat_history, {\n",
+    "            \"role\": \"function\",\n",
+    "            \"name\": func_name,\n",
+    "            \"content\": str(func_output),\n",
+    "        })\n",
     "    return chat_history"
    ]
   },
@@ -339,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 25,
    "id": "05173b54",
    "metadata": {},
    "outputs": [
@@ -485,22 +493,59 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c7afa63",
+   "id": "0852e68d",
    "metadata": {},
    "source": [
     "### Scenario 2: Information retrieval\n",
     "\n",
-    "- Customer: I need invoice for my order\n",
+    "- Customer: How do i download invoices?\n",
     "- Bot: Here's how to get order invoice... (retrieval from docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7e4752f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<b>user:</b> How do i download invoices?"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>assistant:</b> help_center({<br>  \"query\": \"How do i download invoices?\"<br>})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<b>function:</b> To get order invoice go to Account > Orders > [Your order] > Download invoice."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "user_inputs = [\n",
+    "    \"How do i download invoices?\"\n",
+    "]\n",
+    "\n",
+    "chat_history = []\n",
+    "for inp in user_inputs:\n",
+    "    chat_history = add_to_chat_history(chat_history, {\"role\": \"user\", \"content\": inp})\n",
+    "    chat_history = simulate_conversation(order_api, chat_history)"
+   ]
   },
   {
    "cell_type": "code",
